UDIMs not packing to blend file and causing color artifacts #117411

Closed
opened 2024-01-22 15:41:13 +01:00 by Simon Thommes · 2 comments
Member

System Information
Operating system: Linux-6.7.0-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-22 11:27, hash: 29aaa2922d1d
Worked: (newest version of Blender that worked as expected)

Short description of error
Packing UDIM image textures in the blend file is not working. Additionally, when loading such a file there are colored artifacts visible around the edge of each UDIM tile. These artifacts don't show up in the image editor, but they do not disappear when painting over them.

Exact steps for others to reproduce the error
File:
geonodes_udim.blend

From scratch:

  • create new file and save
  • create new image texture
  • change image source to UDIM Tiles
  • add a tile
  • draw on a tile
  • run the pack operator from the Image menu
  • save and reload
**System Information** Operating system: Linux-6.7.0-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-22 11:27, hash: `29aaa2922d1d` Worked: (newest version of Blender that worked as expected) **Short description of error** Packing UDIM image textures in the blend file is not working. Additionally, when loading such a file there are colored artifacts visible around the edge of each UDIM tile. These artifacts don't show up in the image editor, but they do not disappear when painting over them. <video src="/attachments/59171080-f4ca-4473-b778-839ecf828589" title="bug-udim_packing-2024-01-22_15.36.44.mp4" controls></video> **Exact steps for others to reproduce the error** File: [geonodes_udim.blend](/attachments/d5411647-4e4a-4275-8b62-4576be05b2e2) From scratch: - create new file and save - create new image texture - change image source to UDIM Tiles - add a tile - draw on a tile - run the pack operator from the Image menu - save and reload
Simon Thommes added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-01-22 15:41:14 +01:00

I'll take a look but I'm not able to reproduce the scenario from scratch. How did you perform the initial packing step for that image?

Typically you would see something like Packed to memory image "the path" as the UI message and you would also see the following UI:
image.png

I'll take a look but I'm not able to reproduce the scenario from scratch. How did you perform the initial packing step for that image? Typically you would see something like `Packed to memory image "the path"` as the UI message and you would also see the following UI: ![image.png](/attachments/d6d660ac-af95-414c-bf56-2208acda28be)
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2024-01-23 07:47:25 +01:00
Author
Member

I'm guessing the problem is that I didn't start with a UDIM on disk, but created it directly in Blender, so there is no path on disk to reference. I'll add my exact steps to the description

I'm guessing the problem is that I didn't start with a UDIM on disk, but created it directly in Blender, so there is no path on disk to reference. I'll add my exact steps to the description
Iliya Katushenock added the
Module
Core
label 2024-01-23 19:19:42 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-24 21:30:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117411
No description provided.